<resources>
    <string name="app_name">FoodAttack</string>

    <string name="action_settings">Settings</string>

    <!-- Strings for the buttons in the main menu -->
    <string name="avail_food">Available Food</string>
    <string name="shop_list">Shopping List</string>
    <string name="recipes">Recipes</string>
    <string name="roll_call">Roll Call</string>
    <string name="title_activity_stock_list">Available Items</string>
    <string name="title_activity_shop_list">Shopping List</string>
    <string name="title_activity_recipe_list">Recipes</string>
    <string name="title_activity_roll_call">Roll Call</string>
    <string name="title_activity_login">Login</string>


    <!-- Strings for the login screen/create new user screen -->
    <string name="signing_in">Signing In...</string>
    <string name="login_text">Login</string>
    <string name="create_acc_text">Create New Account</string>
    <string name="create_password">Password</string>
    <string name="re_key_password">Re-enter password</string>
    <string name="skipLogin">Skip Signing-In</string>
    <string name="forgot_pass_string">Forgot Password</string>

    <!-- Hints for stocklist and shoplist -->
    <string name="ingredient_hint">Ingredient</string>
    <string name="qty_hint">Quantity</string>
    <string name="brand_hint">Brand</string>
    <string name="restock_hint">Restock Duration</string>

    <!--Strings for the ShopList related XML files -->
    <string name="title_activity_main_settings">Settings</string>

    <!--Strings for the Settings page (opened by clicking settings in the main menu -->
    <string name="settings_user_status">View account info</string>
    <string name="settings_family_status">View family status</string>
    <string name="settings_add_family">Add family member</string>
    <string name="title_activity_add_recipe">AddRecipe</string>

    <!--Strings for search-->
    <string name="action_search">Search</string>
    <string name="search_shop_list">Search for item</string>
    <string name="title_ShopList_search_results">Search Results</string>
    <string name="no_results">Your search did not yield any results</string>

    <!--Strings in the RecipeList page -->
    <string name="hint_recipe_name">Name of Recipe</string>
    <string name="hint_recipe_ingredients">Ingredients</string>
    <string name="hint_recipe_steps">Steps</string>
    <string name="title_activity_display_recipe">DisplayRecipe</string>
    <string name="title_activity_edit_recipe">EditRecipe</string>


    <string name="action_refresh">Refresh</string>
    <string name="action_save_item">Save</string>
    <string name="action_add_item">Add</string>
    <string name="action_done_shopping">DONE SHOPPING</string>
    <string name="title_activity_edit_stock_item">Add Stock Item</string>
    <string name="edit_error_title">Error!</string>
    <string name="edit_error_no_qty">You cannot save an item without it\'s quantity.</string>
    <string name="title_activity_edit_shop_item">Add Shop Item</string>
    <string name="dialog_done_title">Add restock duration</string>
    <string name="title_activity_splash">Food Attack</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutorial">Tutorial</string>


</resources>
