<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/stocklist_ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_hint"
        />

    <EditText
        android:id="@+id/stocklist_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_hint"
        />

    <EditText
        android:id="@+id/stocklist_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qty_hint"
        />

    <EditText
        android:id="@+id/stocklist_restock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/restock_hint"
        />

</LinearLayout>
