<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.foodattack.foodattack.EditShopItemActivity">

    <!-- Input field for shop item name -->
    <EditText
        android:id="@+id/edit_shop_itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_hint"/>

    <!-- Input field for shop item brand -->
    <EditText
        android:id="@+id/edit_shop_itemBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_hint"/>

    <!-- Input field for shop item qty -->
    <EditText
        android:id="@+id/edit_shop_itemQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qty_hint"/>

    <!-- Button to add new item -->
    <Button
        android:id="@+id/edit_shop_saveItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_save_item" />

</LinearLayout>
