<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.foodattack.foodattack.StockListActivityParse">

    <!-- TODO when search search expands other icons should disappear -->

    <!-- Refresh Button -->
    <item
        android:id="@+id/action_refresh_stocklist"
        android:icon="@drawable/ic_refresh_white"
        android:showAsAction="always|withText"
        android:title="@string/action_refresh">
    </item>

    <!--Button to add a new item to the stock list -->
    <item android:id="@+id/action_add_stock_item"
        app:showAsAction="always"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_item" />

    <!-- Button to search for things in your stock list -->
    <item android:id="@+id/action_stock_list_search"
        app:showAsAction="collapseActionView|always"
        android:showAsAction="collapseActionView|always"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search" />

    <!--Settings option in drop down list -->
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
