<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.foodattack.foodattack.EditRecipe">

    <EditText android:id="@+id/edit_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_recipe_name"/>

    <EditText android:id="@+id/edit_recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_recipe_ingredients"
        android:verticalScrollbarPosition="right"
        android:gravity="left"
        android:layout_weight="1"/>

    <EditText android:id="@+id/edit_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_recipe_steps"
        android:verticalScrollbarPosition="right"
        android:gravity="left"
        android:layout_weight="2" />

</LinearLayout>
