<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="4"
    android:baselineAligned="false"
    >



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="5dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical"
        android:id="@+id/main_buttons1"
        android:layout_weight="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avail_food"
            android:background="@drawable/custom_btn_main"
            android:onClick="getStock"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipes"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_main"
            android:onClick="getRecipeList"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="5dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical"
        android:id="@+id/main_buttons2"
        android:layout_weight="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shop_list"
            android:background="@drawable/custom_btn_main"
            android:onClick="getShopList"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll_call"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_main"
            android:onClick="getRollCallActivity"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
</LinearLayout>